# fast-gpu

./: benchmark_cl.py  benchmark_v4.py  benchmark_v5.py  cg_v1.py  solver.cl
bench_work/: benchmark_v5.py  config.py
bench_work/tests/: benchmarks.txt
fpie/core/openmp/: CMakeLists.txt  equ.cc  grid.cc  multigrid.cc  solver.cc  v3.cc  v4.cc  v5.cc
